[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Calculate (Finnish: laskea) some parts.
home_page = https://github.com/sthagen/laskea

keywords =
    code-generation
    developer-tools
    markdown
    validation
    verification

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = laskea

project_urls =
    Bug Tracker = https://github.com/sthagen/laskea/issues
    Documentation = https://sthagen.github.io/laskea
    Source Code = https://github.com/sthagen/laskea

url = https://github.com/sthagen/laskea
version = 2022.7.2


classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8

install_requires =
    atlassian-python-api >= 3.25.0
    cogapp >= 3.3.0
    jmespath >= 1.0.1
    pydantic >= 1.9.1
    requests-cache >= 0.9.5
    scooby >= 0.5.12
    typer >= 0.4.1

packages = find:

[options.entry_points]
console_scripts =
    laskea = laskea.cli:app

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = tests
filterwarnings = error

[coverage:run]
branch = True
[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py
[isort]
line_length=120
known_first_party=mapology
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
[mypy]
strict = True
implicit_reexport = True
[flake8]
max-line-length = 120
max-complexity = 42
ignore = E203, W503
inline-quotes = '
multiline-quotes = """
